# workflows-starter-app

./: Makefile  README.MD  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
local_lib/: main.py  pyproject.toml
project_a/: Makefile  README.md  pyproject.toml
project_foo/: README.md  pyproject.toml
project_foo/src/workflows/: hello.py
src/: worker.py
src/discover/: __init__.py
src/mistral_workflows_cli/: _version.py  main.py  setup.py
src/mistral_workflows_cli/_template/template/: .env.jinja  README.md.jinja  pyproject.toml.jinja
src/mistral_workflows_cli/_template/template/src/examples/linear_summarization/: README.md  __init__.py
template/: .env.jinja  Makefile  README.md.jinja  pyproject.toml.jinja
template/.agents/skills/workflows/: SKILL.md
template/.agents/skills/workflows/references/: documentation-structure.mdx  execution_ids.md  pipeline_pattern.md  progress_decorator.md  robots.mdx  workflow_testing.md
template/.agents/skills/workflows/references/appendices/: payload-encoding.mdx  streaming.mdx  worker-versioning.mdx
template/.agents/skills/workflows/references/cookbooks/: index.mdx
template/.agents/skills/workflows/references/getting-started/: core-concepts.mdx  installation.mdx  introduction.mdx  python-sdk.mdx  useful-links.mdx  value-proposition.mdx  your-first-workflow.mdx
template/.agents/skills/workflows/references/guides/: _deployment-patterns.mdx  activities.mdx  assist-workflows.mdx  concurrency.mdx  contributing.mdx  dependency-injection.mdx  diagnostics.md  durable-agents.mdx  error-codes.mdx  handling-large-data.mdx  limitations.mdx  local-execution.mdx  migration-v2-to-v3.mdx  nuage-plugin.mdx  observability.mdx  payload-encoding.mdx  rate-limiting.mdx  scheduling.mdx  signals-queries-updates.mdx  streaming-consumption.mdx  streaming.mdx  testing.md  workflows-exception.mdx  workflows-plugins.mdx  workflows.mdx
template/src/: dev_worker.py  discover.py  discover.py.jinja  env_config.py  worker.py
template/src/cli/: dev.py  worker.py
template/src/entrypoints/: worker.py
template/src/examples/: worker.py
template/src/examples/cargo_release/: README.md  activities.py
template/src/examples/cargo_release/sample_data/: shipping_doc_anomaly.txt  shipping_doc_normal.txt
template/src/examples/code_modernization/: README.md
template/src/examples/insurance_claims/: README.md  activities.py
template/src/examples/linear_summarization/: README.md  linear_activities.py  summary_activity.py  workflow.py
template/src/workflows/: hello.py  hello.py.jinja  start.py  start.py.jinja
template/tests/: test_env_config.py
tests/: test_setup.py
